[package]
name = "api_key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.regex]
version = "1.3"
default-features = false

features = ["std"]

[dependencies]
rand = "0.8.5"
uuid = "1.8.0"
base32 = "0.4.0"
